--- a/assets/sass/partials/base/_menu-icon.scss
+++ b/assets/sass/partials/base/_menu-icon.scss
@@ -60,13 +60,13 @@
 
 // Set the hover
 // -----------------------------------------------------------------------------
-  &:hover {
-    border: 0 !important;
-
-    rect {
-      fill: $primary;
-    }
-  }
+  // &:hover {
+  //   border: 0 !important;
+  //
+  //   rect {
+  //     fill: $primary;
+  //   }
+  // }
 
 // Set the on-click state (replace the &:focus selector with the active class)
 // -----------------------------------------------------------------------------
@@ -110,13 +110,13 @@
   @include mq(hybrid) {
     animation: menu-h-in .333s ease-out forwards !important; // Slide In animation
 
-    &:hover rect {
-      fill: $black !important;
-    }
+    // &:hover rect {
+    //   fill: $black !important;
+    // }
 
-    &.nav-close:hover rect {
-      fill: $black !important;
-    }
+    // &.nav-close:hover rect {
+    //   fill: $black !important;
+    // }
 
     &.nav-close rect {
       fill: $black !important;
