--- a/assets/sass/partials/base/_navigation.scss
+++ b/assets/sass/partials/base/_navigation.scss
@@ -39,4 +39,9 @@
   }
 // -----------------------------------------------------------------------------
 }
+
+.nav-opened .main-nav {
+  position: fixed;
+  top: 0;
+}
 // -----------------------------------------------------------------------------
