--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -53,9 +53,6 @@
   margin: 0 auto;
   padding: 0; }
 
-::selection {
-  background-color: rgba(240, 50, 70, 0.5); }
-
 html {
   font-size: 20px; }
 
@@ -70,9 +67,24 @@ body {
   font-variant-ligatures: common-ligatures;
   font-weight: 400;
   text-rendering: optimizeLegibility; }
+  body::after {
+    content: '';
+    left: 0;
+    opacity: 0;
+    pointer-events: none;
+    position: fixed;
+    right: 0;
+    top: 0; }
   body.nav-opened {
     height: 100vh;
     overflow: hidden; }
+    body.nav-opened::after {
+      animation: menu-in .333s ease-out forwards;
+      background-color: white;
+      content: '';
+      height: 100vh;
+      width: 100%;
+      z-index: 10000; }
 
 .site-wrapper {
   max-width: 1280px;
