--- a/assets/sass/partials/base/_general.scss
+++ b/assets/sass/partials/base/_general.scss
@@ -11,10 +11,6 @@
   margin: 0 auto;
   padding: 0;
 }
-
-::selection {
-  background-color: rgba($primary, .5);
-}
 // -----------------------------------------------------------------------------
 
 
@@ -40,9 +36,28 @@ body {
   font-weight: $regular;
   text-rendering: optimizeLegibility;
 
+  &::after {
+    content: '';
+    left: 0;
+    opacity: 0;
+    pointer-events: none;
+    position: fixed;
+    right: 0;
+    top: 0;
+  }
+
   &.nav-opened {
     height: 100vh;
     overflow: hidden;
+
+    &::after {
+      animation: menu-in .333s ease-out forwards;
+      background-color: $white;
+      content: '';
+      height: $menu-height;
+      width: $menu-width;
+      z-index: $z-top;
+    }
   }
 }
 // -----------------------------------------------------------------------------
