--- a/assets/sass/partials/base/_menu.scss
+++ b/assets/sass/partials/base/_menu.scss
@@ -34,15 +34,11 @@ body > .nav {
 // -----------------------------------------------------------------------------
   > ul {
     display: block;
-    left: 50%;
     list-style: none;
     max-width: $site-box;
     padding: 0 $distance * 1.5;
-    position: absolute;
+    position: relative;
     text-align: right;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
 
     @include mq(desktop) {
       padding: 0 $distance * 3;
