--- a/assets/sass/partials/base/_menu-icon.scss
+++ b/assets/sass/partials/base/_menu-icon.scss
@@ -66,33 +66,29 @@
 
 // Set the on-click state (replace the &:focus selector with the active class)
 // -----------------------------------------------------------------------------
-  &.nav-close {
-    position: fixed;
-
-    rect {
+  &.nav-close rect {
 // Animation -------------------------------------------------------------------
 // scss-lint:disable NestingDepth
-      @keyframes cross-l {
-        0% {transform: translateY(#{($icon - $line) / 2});}
-        33% {transform: translateY(#{($icon - $line) / 2}) rotate(-45deg);}
-        100% {transform: translateY(#{($icon - $line) / 2}) rotate(-45deg);}
-      }
-
-      @keyframes cross-r {
-        0% {transform: translateY(#{($icon - $line) / 2});}
-        33% {transform: translateY(#{($icon - $line) / 2}) rotate(45deg);}
-        100% {transform: translateY(#{($icon - $line) / 2}) rotate(45deg);}
-      }
-
-      &:nth-child(odd) {
-        animation: cross-l .666s ease-out forwards;
-      }
-
-      &:nth-child(even) {
-        animation: cross-r .666s ease-out forwards;
-      }
-// -----------------------------------------------------------------------------
+    @keyframes cross-l {
+      0% {transform: translateY(#{($icon - $line) / 2});}
+      33% {transform: translateY(#{($icon - $line) / 2}) rotate(-45deg);}
+      100% {transform: translateY(#{($icon - $line) / 2}) rotate(-45deg);}
     }
+
+    @keyframes cross-r {
+      0% {transform: translateY(#{($icon - $line) / 2});}
+      33% {transform: translateY(#{($icon - $line) / 2}) rotate(45deg);}
+      100% {transform: translateY(#{($icon - $line) / 2}) rotate(45deg);}
+    }
+
+    &:nth-child(odd) {
+      animation: cross-l .666s ease-out forwards;
+    }
+
+    &:nth-child(even) {
+      animation: cross-r .666s ease-out forwards;
+    }
+// -----------------------------------------------------------------------------
   }
 // -----------------------------------------------------------------------------
 
