--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -351,8 +351,7 @@ body {
         .icon-menu.nav-close rect:nth-child(even) {
           animation: cross-r .666s ease-out forwards !important; } }
 
-body > .nav {
-  background-color: white;
+.main-menu .nav {
   bottom: 0;
   color: #223347;
   height: 100vh;
@@ -364,9 +363,9 @@ body > .nav {
   top: 0;
   width: 100%;
   z-index: 10001; }
-  body > .nav.closed {
+  .main-menu .nav.closed {
     animation: menu-out .333s ease-in forwards; }
-  body > .nav > ul {
+  .main-menu .nav > ul {
     display: block;
     list-style: none;
     max-width: 1280px;
@@ -375,24 +374,24 @@ body > .nav {
     text-align: right;
     top: 110px; }
     @media (max-width: 1280px) {
-      body > .nav > ul {
+      .main-menu .nav > ul {
         padding: 0 30px; } }
-  body > .nav .nav-title {
+  .main-menu .nav .nav-title {
     color: #4b719d;
     font-size: 1.5rem;
     line-height: 1.48em;
     margin-bottom: 30px; }
-  body > .nav li {
+  .main-menu .nav li {
     font-size: 4rem;
     font-weight: 700;
     line-height: 5rem; }
     @media (max-width: 640px) {
-      body > .nav li {
+      .main-menu .nav li {
         font-size: 20vw;
         line-height: 25vw; } }
-  body > .nav a {
+  .main-menu .nav a {
     transition: text-shadow 50ms; }
-    body > .nav a:focus, body > .nav a:hover {
+    .main-menu .nav a:focus, .main-menu .nav a:hover {
       border: 0; }
 
 .nav-opened > .nav {
