--- a/assets/sass/partials/base/_menu.scss
+++ b/assets/sass/partials/base/_menu.scss
@@ -7,8 +7,8 @@
 // -----------------------------------------------------------------------------
 // Nav block
 // -----------------------------------------------------------------------------
-body > .nav {
-  background-color: $white;
+.main-menu .nav {
+  // background-color: $white;
   bottom: 0;
   color: $black;
   height: $menu-height;
