--- a/default.hbs
+++ b/default.hbs
@@ -33,14 +33,17 @@
 <body class="{{body_class}} nav-closed">
 
   {{#if @blog.navigation}}
-    <span tabindex="0" class="menu-button icon-menu">
-      <svg version="1.1" id="hamburger-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-      viewBox="0 0 32 32" enable-background="new 0 0 32 32" xml:space="preserve" preserveAspectRatio="xMaxYMin meet">
-        <rect/>
-        <rect/>
-      </svg>
-    </span>
-    {{navigation}}
+    <div class="main-menu">
+      <span tabindex="0" class="menu-button icon-menu">
+        <svg version="1.1" id="hamburger-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+        viewBox="0 0 32 32" enable-background="new 0 0 32 32" xml:space="preserve" preserveAspectRatio="xMaxYMin meet">
+          <rect/>
+          <rect/>
+        </svg>
+      </span>
+
+      {{navigation}}
+    </div>
   {{/if}}
 
   {{! Main navigation menu }}
