--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -351,6 +351,9 @@ body {
         .icon-menu.nav-close rect:nth-child(even) {
           animation: cross-r .666s ease-out forwards !important; } }
 
+.main-menu {
+  z-index: 10001; }
+
 .main-menu .nav {
   background-color: white;
   bottom: 0;
@@ -363,7 +366,7 @@ body {
   right: 0;
   top: 0;
   width: 100%;
-  z-index: 10001; }
+  z-index: -1; }
   .main-menu .nav.closed {
     animation: menu-out .333s ease-in forwards; }
   .main-menu .nav > ul {
