--- a/assets/sass/partials/base/_menu.scss
+++ b/assets/sass/partials/base/_menu.scss
@@ -7,6 +7,11 @@
 // -----------------------------------------------------------------------------
 // Nav block
 // -----------------------------------------------------------------------------
+.main-menu {
+  z-index: $z-top + 1;
+}
+
+
 .main-menu .nav {
   background-color: $white;
   bottom: 0;
@@ -19,7 +24,7 @@
   right: 0;
   top: 0;
   width: $menu-width;
-  z-index: $z-top + 1;
+  z-index: -1;
 
 
 // If nav is closed
