--- a/assets/sass/partials/base/_menu.scss
+++ b/assets/sass/partials/base/_menu.scss
@@ -7,12 +7,7 @@
 // -----------------------------------------------------------------------------
 // Nav block
 // -----------------------------------------------------------------------------
-.main-menu {
-  z-index: $z-top + 1;
-}
-
-
-.main-menu .nav {
+body > .nav {
   background-color: $white;
   bottom: 0;
   color: $black;
@@ -24,7 +19,7 @@
   right: 0;
   top: 0;
   width: $menu-width;
-  z-index: -1;
+  z-index: $z-top + 1;
 
 
 // If nav is closed
@@ -39,12 +34,15 @@
 // -----------------------------------------------------------------------------
   > ul {
     display: block;
+    left: 50%;
     list-style: none;
     max-width: $site-box;
     padding: 0 $distance * 1.5;
-    position: relative;
+    position: absolute;
     text-align: right;
-    top: $header-height + $distance * 3;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
 
     @include mq(desktop) {
       padding: 0 $distance * 3;
@@ -77,7 +75,7 @@
     &:focus,
     &:hover {
       border: 0;
-      // text-shadow: $border * 1.5 $border * 1.5 $primary;
+      text-shadow: $border * 1.5 $border * 1.5 $primary;
     }
   }
 // -----------------------------------------------------------------------------
@@ -87,7 +85,7 @@
 
 // If nav is opened
 // -----------------------------------------------------------------------------
-.nav-opened .main-menu .nav {
+.nav-opened > .nav {
   animation: menu-in .333s ease-out forwards;
   pointer-events: all;
 }
