--- a/assets/sass/partials/base/_menu-icon.scss
+++ b/assets/sass/partials/base/_menu-icon.scss
@@ -62,65 +62,41 @@
 // -----------------------------------------------------------------------------
   &:hover {
     border: 0 !important;
-
-    rect {
-      fill: $primary;
-    }
   }
 
 // Set the on-click state (replace the &:focus selector with the active class)
 // -----------------------------------------------------------------------------
-  &.nav-close {
-    position: fixed;
-
-    rect {
+  &.nav-close rect {
 // Animation -------------------------------------------------------------------
 // scss-lint:disable NestingDepth
-      @keyframes cross-l {
-        0% {transform: translateY(#{($icon - $line) / 2});}
-        33% {transform: translateY(#{($icon - $line) / 2}) rotate(-45deg);}
-        100% {transform: translateY(#{($icon - $line) / 2}) rotate(-45deg);}
-      }
-
-      @keyframes cross-r {
-        0% {transform: translateY(#{($icon - $line) / 2});}
-        33% {transform: translateY(#{($icon - $line) / 2}) rotate(45deg);}
-        100% {transform: translateY(#{($icon - $line) / 2}) rotate(45deg);}
-      }
-
-      &:nth-child(odd) {
-        animation: cross-l .666s ease-out forwards;
-      }
-
-      &:nth-child(even) {
-        animation: cross-r .666s ease-out forwards;
-      }
-// -----------------------------------------------------------------------------
+    @keyframes cross-l {
+      0% {transform: translateY(#{($icon - $line) / 2});}
+      33% {transform: translateY(#{($icon - $line) / 2}) rotate(-45deg);}
+      100% {transform: translateY(#{($icon - $line) / 2}) rotate(-45deg);}
     }
-  }
 
-  &.nav-close:hover rect {
-    fill: $primary;
-    width: #{$icon};
-  }
+    @keyframes cross-r {
+      0% {transform: translateY(#{($icon - $line) / 2});}
+      33% {transform: translateY(#{($icon - $line) / 2}) rotate(45deg);}
+      100% {transform: translateY(#{($icon - $line) / 2}) rotate(45deg);}
+    }
+
+    &:nth-child(odd) {
+      animation: cross-l .666s ease-out forwards;
+    }
+
+    &:nth-child(even) {
+      animation: cross-r .666s ease-out forwards;
+    }
 // -----------------------------------------------------------------------------
+  }
 
 
 // Prevent hover on mobile -----------------------------------------------------
   @include mq(hybrid) {
     animation: menu-h-in .333s ease-out forwards !important; // Slide In animation
 
-    &:hover rect {
-      fill: $black !important;
-    }
-
-    &.nav-close:hover rect {
-      fill: $black !important;
-    }
-
     &.nav-close rect {
-      fill: $black !important;
-
       &:nth-child(odd) {animation: cross-l .666s ease-out forwards !important;}
 
       &:nth-child(even) {animation: cross-r .666s ease-out forwards !important;}
