--- a/assets/sass/partials/base/_hero-section.scss
+++ b/assets/sass/partials/base/_hero-section.scss
@@ -8,7 +8,7 @@
 .hero-section {
   background-position: center;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   height: $site-height;
   max-height: $site-box / 1.2;
   min-height: $hero-min-height;
