Replaced main color.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -176,8 +176,8 @@ body {
   padding: 0 20px;
   transition: color 150ms ease-out, border-color 150ms ease-out; }
   .button:hover {
-    border: 3px solid #dc006e;
-    color: #dc006e; }
+    border: 3px solid #ff0064;
+    color: #ff0064; }
 
 .site-footer {
   height: 40px;
@@ -249,7 +249,7 @@ body {
 
 .menu-box {
   animation: none !important;
-  border: 6px solid #dc006e;
+  border: 6px solid #ff0064;
   max-width: calc(33.33vw - 20px);
   padding: 15px;
   width: 300px;
@@ -261,16 +261,16 @@ body {
     margin-left: 0;
     text-align: left; }
     .menu-box.left li:hover {
-      color: #a90055;
+      color: #cc0050;
       padding-left: 10px; }
   .menu-box.right {
     margin-right: 0;
     text-align: right; }
     .menu-box.right li:hover {
-      color: #a90055;
+      color: #cc0050;
       padding-right: 10px; }
   .menu-box li {
-    color: #dc006e;
+    color: #ff0064;
     font-size: 2rem;
     font-weight: 300;
     line-height: 1.11em;
@@ -394,7 +394,7 @@ body > .nav {
     transition: text-shadow 50ms; }
     body > .nav a:focus, body > .nav a:hover {
       border: 0;
-      text-shadow: 4.5px 4.5px #dc006e; }
+      text-shadow: 4.5px 4.5px #ff0064; }
 
 .nav-opened > .nav {
   animation: menu-in .333s ease-out forwards;
@@ -528,10 +528,10 @@ pre[class*='language-'] {
 .token.constant,
 .token.symbol,
 .token.deleted {
-  color: #a90055; }
+  color: #cc0050; }
 
 .token.boolean {
-  color: #a90055; }
+  color: #cc0050; }
 
 .token.number,
 .token.selector,
@@ -907,7 +907,7 @@ h6 {
         line-height: 1.48em;
         margin: 10px auto; }
       .author-profile .author-block > section a {
-        color: #dc006e;
+        color: #ff0064;
         font-size: 0.85rem;
         line-height: 2.96em; }
         .author-profile .author-block > section a:hover {
@@ -1120,7 +1120,7 @@ h6 {
       transition: text-shadow 50ms; }
       .menu-widget > .nav > ul a:hover {
         border: 0;
-        text-shadow: 4.5px 4.5px #dc006e; }
+        text-shadow: 4.5px 4.5px #ff0064; }
 
 .post-template:not(.page-template) .post-heading {
   max-width: 1280px;
@@ -1197,7 +1197,7 @@ h6 {
       margin-left: 5px; }
   .post-template:not(.page-template) .main-info .post-cap {
     bottom: -8rem;
-    color: #dc006e;
+    color: #ff0064;
     font-size: 0;
     font-weight: 300;
     line-height: 1em;
