Added 'See also' links.

--- a/post.hbs
+++ b/post.hbs
@@ -76,7 +76,7 @@
         </section>
 
         <section class="related-posts">
-          <span>More projects:</span>
+          <span>See also:</span>
 
           {{#prev_post}}
             <a href="{{url}}">{{title}}</a>
