--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,7 +8,7 @@
     opacity: 1;
     transform: translateY(0); } }
 
-@keyframes menu-in {
+@keyframes menu-li-in {
   from {
     opacity: 0;
     transform: scale(1.1) translateZ(10px); }
@@ -16,13 +16,25 @@
     opacity: 1;
     transform: scale(1) translateZ(0); } }
 
-@keyframes menu-out {
+@keyframes menu-in {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+
+@keyframes menu-li-out {
   from {
     opacity: 1;
     transform: scale(1) translateZ(0); }
   to {
     opacity: 0;
     transform: scale(1.1) translateZ(10px); } }
+
+@keyframes menu-out {
+  from {
+    opacity: 1; }
+  to {
+    opacity: 0; } }
 
 @keyframes op-in {
   from {
@@ -362,6 +374,8 @@ body > .nav {
   width: 100%;
   z-index: 10001; }
   body > .nav.closed ul {
+    animation: menu-li-out .333s ease-in forwards; }
+  body > .nav.closed {
     animation: menu-out .333s ease-in forwards; }
   body > .nav > ul {
     display: block;
@@ -397,6 +411,10 @@ body > .nav {
       text-shadow: 4.5px 4.5px #ff0064; }
 
 .nav-opened > .nav ul {
+  animation: menu-li-in .333s ease-out forwards;
+  pointer-events: all; }
+
+.nav-opened > .nav {
   animation: menu-in .333s ease-out forwards;
   pointer-events: all; }
 
