--- a/assets/sass/variables/_animations.scss
+++ b/assets/sass/variables/_animations.scss
@@ -23,7 +23,7 @@
 // Menu Zoom & Fade
 // -----------------------------------------------------------------------------
 // Menu open -------------------------------------------------------------------
-@keyframes menu-in {
+@keyframes menu-li-in {
   from {
     opacity: 0;
     transform: scale(1.1) translateZ(#{$distance});
@@ -35,9 +35,19 @@
   }
 }
 
+@keyframes menu-in {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
 
 // Menu close ------------------------------------------------------------------
-@keyframes menu-out {
+@keyframes menu-li-out {
   from {
     opacity: 1;
     transform: scale(1) translateZ(0);
@@ -46,6 +56,16 @@
   to {
     opacity: 0;
     transform: scale(1.1) translateZ(#{$distance});
+  }
+}
+
+@keyframes menu-out {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
   }
 }
 // -----------------------------------------------------------------------------
