--- a/assets/sass/variables/_animations.scss
+++ b/assets/sass/variables/_animations.scss
@@ -26,12 +26,12 @@
 @keyframes menu-li-in {
   from {
     opacity: 0;
-    transform: scale(1.1) translateZ(#{$distance});
+    transform: scale(1.1) translate3d(-50%, -50%, #{$distance});
   }
 
   to {
     opacity: 1;
-    transform: scale(1) translateZ(0);
+    transform: scale(1) translate3d(-50%, -50%, 0);
   }
 }
 
@@ -50,12 +50,12 @@
 @keyframes menu-li-out {
   from {
     opacity: 1;
-    transform: scale(1) translateZ(0);
+    transform: scale(1) translate3d(-50%, -50%, 0);
   }
 
   to {
     opacity: 0;
-    transform: scale(1.1) translateZ(#{$distance});
+    transform: scale(1.1) translate3d(-50%, -50%, #{$distance});
   }
 }
 
